--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p>Copyright 2018 Drenick Ceramics. All Rights Reserved. <br>Made with <i class="icon-heart3 love"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a>
+						<p>Copyright 2018 Drenick Ceramics. All Rights Reserved. </p>
 						</div>
 					</div>
 				</div>
