--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Drenick Ceramics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Chelsea Drenick Ceramics website" />
-	<meta name="keywords" content="Drenick, ceramic, cup, mug, pottery" />
+	<meta name="description" content="Drenick Ceramics is a San Francisco based pottery business" />
+	<meta name="keywords" content="Drenick, ceramic, cup, mug, pottery, ceramics, chelsea, plates" />
 
 
 	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
+	<meta property="og:title" content="Drenick Ceramics"/>
+	<meta property="og:image" content="http://drenickceramics.com/images/portfolio_pic1.jpg"/>
+	<meta property="og:url" content="http://drenickceramics.com"/>
+	<meta property="og:site_name" content="Drenick Ceramics"/>
+	<meta property="og:description" content="Drenick Ceramics is a San Francisco based pottery business"/>
+	<meta name="twitter:title" content="Drenick Ceramics" />
+	<meta name="twitter:image" content="http://drenickceramics.com/images/portfolio_pic1.jpg" />
+	<meta name="twitter:url" content="http://drenickceramics.com" />
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -98,6 +98,18 @@
 		<!-- END fh5co-portfolio-section -->
 		<div id="fh5co-services-section">
 			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section">
+						<h2>About</h2>
+						<h3>My ceramic career began at age 5 when my mother signed me up for a class in my hometown of Boulder, Colorado. I was captivated from the beginning and clay has been ever present in my life for the 25 years since. I am constantly in awe of ceramics as a medium. Clay is an incredible substance, with its beginning malleability and ending strength. The control and skill required by the artist, yet the lack of control the artist has on what happens in the kiln. In college, I took ceramics classes along with engineering classes to refine my technique and better learn the science. Now, living in San Francisco, I am a structural engineer by day and a ceramic artist by night looking to grow my evening craft into a business.</h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section">
+						<h2>Inspirations</h2>
+						<h3>I am inspired by function, and how beautiful a utilitarian form can be. It is hard to describe the satisfaction of a perfect form, but everyone knows it when they see it. The way a vase can elevate above the tabletop as if its floating and weightless. The subtle organic shape of a mug that fits in your hand just so. I strive for perfection in my work but revel in the small subtleties that result from a handmade piece of ceramics.</h3>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
 						<h2>Contact</h2>
