changed about title

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h2>About</h2>
+						<h2>About Chelsea Drenick</h2>
 						<h3>My ceramic career began at age 5 when my mother signed me up for a class in my hometown of Boulder, Colorado. I was captivated from the beginning and clay has been ever present in my life for the 25 years since. I am constantly in awe of ceramics as a medium. Clay is an incredible substance, with its beginning malleability and ending strength. The control and skill required by the artist, yet the lack of control the artist has on what happens in the kiln. In college, I took ceramics classes along with engineering classes to refine my technique and better learn the science. Now, living in San Francisco, I am a structural engineer by day and a ceramic artist by night looking to grow my evening craft into a business.</h3>
 					</div>
 				</div>
