Added mailchimp and email address

--- a/index.html
+++ b/index.html
@@ -113,27 +113,28 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
 						<h2>Contact</h2>
-						<h3>For product inquiries, wholesale requests or just to say hello use the form to contact me!</h3>
-						<form action="https://formspree.io/chelsea@drenickceramics.com" method="POST">
-							<div class="form-group">
-								<label for="name">Your name</label>
-								<input type="text" class="form-control" id="email" name="name">
-							</div>
-							<div class="form-group">
-								<label for="email">Your Email</label>
-								<input type="email" id="email" class="form-control" name="_replyto">
-							</div>
-							<div class="form-group">
-								<label for="message">Your Message</label>
-								<textarea type="text" class="form-control" id="message" name="message" rows="3"></textarea>
-							</div>
-
-							<input type="submit" class="btn btn-primary" value="Send"><br/>
-							<input type="hidden" name="_subject" value="Drenick Ceramics" />
-							<input type="text" name="_gotcha" style="display:none" />
-						</form>
+						<h3>For product inquiries, wholesale requests or just to say hello <a href="mailto://chelsea@drenickceramics.com">email me!</a></h3>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section">
+						<!-- Begin MailChimp Signup Form -->
+						<div id="mc_embed_signup">
+						<form action="https://drenickceramics.us12.list-manage.com/subscribe/post?u=6001a40fdac41ff421ae0ddf9&amp;id=c71acc2e43" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    <div id="mc_embed_signup_scroll">
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								<label for="mce-EMAIL">You can also subscribe to my mailing list</label>
+								<div class="form-group">
+									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required class="form-control">
+								</div>
+								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6001a40fdac41ff421ae0ddf9_c71acc2e43" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+						    </div>
+						</form>
+						</div>
 
+						<!--End mc_embed_signup-->
+					</div>
 				</div>
 			</div>
 		</div>
