--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
 						<h2>Contact</h2>
-						<h3>For product inquiries, wholesale requests or just to say hello <a href="mailto://chelsea@drenickceramics.com">email me!</a></h3>
+						<h3>For product inquiries, wholesale requests or just to say hello <a href="mailto:chelsea@drenickceramics.com">email me!</a></h3>
 					</div>
 				</div>
 				<div class="row">
